--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.6'
     annotationProcessor 'org.projectlombok:lombok:1.18.6'
     compile group: 'com.google.guava', name: 'guava', version: '27.1-android'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
+
 
 }
